# godot-cpp-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: register_types.cpp
